# crms

./: .gitignore  README.md  requirement.txt  rmtb.txt
worker_node/: Dockerfile-builderd  Dockerfile-queryd  cli.py  config.yml  coordinator.py  criteria_db.json  docker-command  docker-compose.yml  host_db.json  main.py  pyproject.toml  requirement.txt  requirements.txt  settings.py
worker_node/builderd/: Dockerfile  builderd.py
worker_node/common/: logging_config.py
worker_node/config/: monitoring-stack-docker-compose.yml  prometheus-docker-compose.yml  prometheus.yml  queries.yml
worker_node/coordinatord/: Dockerfile  config.yaml  coordinatord.py  publisher.py  subscriber.py
worker_node/coordinatord/config/: pwfile
worker_node/coordinatord/data/: mosquitto.db
worker_node/monitord/: Dockerfile  monitord.py  test.py
worker_node/monitoring_config/: monitoring_stack_docker_compose.yml  prometheus.yml  queries.yml
worker_node/mosquitto/config/: pwfile
worker_node/mosquitto/data/: mosquitto.db
worker_node/queryd/: Dockerfile  queryd.py
worker_node/tests/: test_coordinatord.py
worker_node/utils/: logging_config.py  message.py  settings.py  settings.yml
