[project]
name = "worker-node"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jsonpickle>=4.1.1",
    "paho-mqtt>=2.1.0",
    "psutil>=7.2.2",
    "python-on-whales>=0.80.0",
    "pyyaml>=6.0.3",
    "tl-crmdtos>=1.0.0",
    "tl-dockerwrapper>=1.3.5",
    "tl-utilities>=3.0.4",
]

[dependency-groups]
dev = [
    "colorlog>=6.10.1",
]
